syntax = "proto3";

package protobuf;

option go_package = ".;protobuf";

message AutoOpenOrdersRequest {
    optional bool autoBind = 1;
}