syntax = "proto3";

package protobuf;

option go_package = ".;protobuf";

message CompletedOrdersRequest {
    optional bool apiOnly = 1;
}