syntax = "proto3";

package protobuf;

import "Contract.proto";

option go_package = ".;protobuf";

message ExerciseOptionsRequest {
    optional int32 orderId = 1;
    optional Contract contract = 2;
    optional int32 exerciseAction = 3;
    optional int32 exerciseQuantity = 4;
    optional string account = 5;
    optional bool override = 6;
    optional string manualOrderTime = 7;
    optional string customerAccount = 8;
    optional bool professionalCustomer = 9;
}
