syntax = "proto3";

package protobuf;

option go_package = ".;protobuf";

message OpenOrdersRequest {
   // empty
}