
syntax = "proto3";

package protobuf;

import "Contract.proto";
import "Order.proto";

option go_package = ".;protobuf";

message PlaceOrderRequest {
    optional int32 orderId = 1;
    optional Contract contract = 2;
    optional Order order = 3;
}